--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -23,14 +23,16 @@ body {
     -webkit-text-size-adjust: 100%;
 }
 
-
+table {
+    width: 100%;
+}
 
 /**
  * Set `margin-bottom` to maintain vertical rhythm
  */
 h1, h2, h3, h4, h5, h6,
 p, blockquote, pre,
-ul, ol, dl, figure,
+ul, ol, table, dl, figure,
 %vertical-rhythm {
     margin-bottom: $spacing-unit / 2;
 }
